# hugme

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CNAME  LICENCE  README.md  config.json  index.html  mkdocs.yml  mypy.ini  parameters.json  pyproject.toml  requirements.txt  run.sh  setup.py  sitemap.xml  test.md  test.py
.github/workflows/: ci.yml  docs.yml  publish.yml
About/: index.html
Contact/: index.html
Downloads/: index.html
Modules/: index.html
News/: index.html
Results/: index.html
docs/: About.md  Contact.md  HuMMLU.md  LLM-as-a-judge.md  Language-proficiency.md  Modules.md  News.md  Results.md  Tű a szénakazalban.md  World knowledge.md  index.md
docs/source/: Olvashatóság.md  conf.py  index.rst
results/: hugme-results.json
scripts/: compare_cultural.py  compare_open_multiple_cultural.py
search/: search_index.json
src/: answer_provider.py  args.py  cli.py  coherence.py  compare-open-multiple-cultural.py  config.py  eval.py  evaluate.py  evaluate_hugme.py  generation.py  helper.py  hihi_quntoken.py  metrics.py  readability.py  spelling.py  template.py
src/benchmark/: __init__.py  cola.py  cultural.py  cultural_open.py  metrics.py  mmlu.py  nih.py  prompt_alignment.py  readability.py  spelling.py  truthfulqa.py
src/benchmarks/: __init__.py
src/hugme/: cli.py  evaluate.py
src/hugme/benchmark/: mmlu.py
src/metrics/: __init__.py  answer_relevancy.py  bias.py  faithfulness.py  hallucination.py  metric.py  nih.py  toxicity.py
src/scripts/: compare_open_multiple_cultural.py
tests/: test_helper.py
(+4 files in other folders)
